cmake_minimum_required(VERSION 3.13)

project(shell-starter-cpp)

file(GLOB_RECURSE SOURCE_FILES src/*.cpp src/*.hpp)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

add_executable(shell ${SOURCE_FILES})

target_include_directories(shell PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} src/shell)

target_link_libraries(shell PRIVATE readline)
